--- a/landing-page/assets/styles/main.css
+++ b/landing-page/assets/styles/main.css
@@ -16,7 +16,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 605px;
+  height: 604px;
   background-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0) 0%,
@@ -73,7 +73,7 @@ body {
 button {
   display: flex;
   width: 326px;
-  padding: 19px 0;
+  padding: 18px 0;
   justify-content: center;
   align-items: center;
   border: 2px solid #3ba1cd;
@@ -84,6 +84,7 @@ button {
   letter-spacing: 3.36px;
   background-color: transparent;
   margin-top: 8px;
+  cursor: pointer;
 }
 
 #course-content {
@@ -91,7 +92,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 792px;
+  width: 800px;
   margin: 64px auto 144px;
   gap: 24px;
 }
@@ -114,7 +115,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  width: 535px;
+  width: 532px;
 }
 
 .module {
